changed styling a bit.

--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
-    "inversify-props": "^1.0.5",
+    "inversify-props": "1.0.5",
     "moment": "^2.24.0",
+    "reflect-metadata": "^0.1.13",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-localstorage": "^0.6.2",
